[workspace]
resolver = "3"
members = ["contrato-rs", "contrato-wasm"]

[workspace.package]
version = "0.13.4"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
homepage = "https://github.com/balena-io/contrato"
repository = "https://github.com/balena-io/contrato"
authors = ["Balena Inc. <hello@balena.io>"]
readme = "README.md"
