[package]
name = "contrato"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Contract system for describing composable, versioned things and their relationships"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
semver = { version = "1", features = ["serde"] }
regex = "1"

[dev-dependencies]
serde_json = "1"
