[package]
name = "contrato"
description = "Contract system for describing composable, versioned things and their relationships"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
semver = { version = "1.0", features = ["serde"] }
regex = "1.12"

[dev-dependencies]
serde_json = "1"
