[package]
name = "contrato-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "WASM bindings for the contrato contract system"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
contrato = { path = "../contrato-rs" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
serde = "1"
serde_json = "1"
