[package]
name = "contrato-wasm"
description = "WASM bindings for the contrato contract system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
contrato = { path = "../contrato-rs" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
serde = "1.0"
serde_json = "1.0"
